CSS: Prevent moving search on scroll on mobile

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -19,7 +19,7 @@
 \*---------------------------------------------------------------------------*/
 
 .Search {
-  position: relative;
+  position: fixed;
   margin: 24px;
   width: 20em;
   font-weight: 300;
